# DatabaseConverter

./: .gitignore  Makefile  pyproject.toml
databaseconverter/: converter.py  main.py
databaseconverter/db/databases/: DatabaseConnector.py  Mysql.py  Postgres.py
databaseconverter/db/utils/: DatabaseUtils.py
tests/: test_connection.py
